--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "bootstrap": "^5.1.3",
     "electron": "^16.0.4",
     "jasmine-core": "~3.10.0",
+    "jquery": "^3.6.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
